<resources>
    <string name="app_name">CarService</string>

    <!-- Login screen labels -->
    <string name="login">Login</string>
    <string name="login_hint_email">E-mail</string>
    <string name="login_hint_password">Password</string>
    <string name="login_new_here">New Here? Register now.</string>

    <string name="error_dialog_title">Error</string>
    <string name="error_dialog_close">Close</string>

    <!-- Login screen error messages -->
    <string name="login_please_enter_email">Please enter an e-mail.</string>
    <string name="login_please_enter_password">Please enter a password.</string>
    <string name="login_no_such_user">No such registered user found.</string>
    <string name="login_login_failed">Login failed.</string>
    <string name="login_invalid_password">The password is not valid.</string>

    <!-- Login screen labels -->
    <string name="register_email">E-mail</string>
    <string name="register_password">Password</string>
    <string name="register_confirm_password">Confirm password</string>
    <string name="register">Register</string>

    <!-- Register screen error messages -->
    <string name="register_please_enter_email">Please enter an e-mail.</string>
    <string name="register_please_enter_password">Please enter a password.</string>
    <string name="register_please_confirm_password">Please confirm your password.</string>
    <string name="register_email_too_long">The email is too long. Max permitted value is</string>
    <string name="register_email_not_valid">The e-mail is not valid.</string>
    <string name="register_email_already_registered">The e-mail is already registered.</string>
    <string name="register_password_must_be_at_least_ten_characters_long">The password must be at least 10 characters long.</string>
    <string name="register_password_is_too_long">The password is too long. Max permitted value is</string>
    <string name="register_password_does_not_contain_digit">The password does not contain a digit.</string>
    <string name="register_password_does_not_contain_letter">The password does not contain a letter.</string>
    <string name="register_password_does_not_contain_spec_char">The password does not contain a special character.</string>
    <string name="register_passwords_do_not_match">The passwords do not match.</string>
    <string name="register_registration_failed">Registration failed.</string>
    <string name="register_user_created">The user has been registered successfully.</string>

    <!-- List cars -->
    <string name="list_cars_add_car">Add Car</string>
    <string name="list_cars_add_car_owner">Add Car Owner</string>

    <!-- Car details -->
    <string name="car_details_brand_and_model">Brand and model</string>
    <string name="car_details_colour">Colour</string>
    <string name="car_details_doors_count">Doors Count</string>
    <string name="car_details_year_of_manufacture">Year of Manufacture</string>
    <string name="car_details_car_owner">Car Owner</string>
    <string name="car_details_added_by_user">Added by User</string>
    <string name="car_details_check_all_damages">Check All Damages</string>
    <string name="car_details_no_damage_images">No damages.</string>

    <!-- Add car -->
    <string name="add_car_brand">Brand</string>
    <string name="add_car_model">Model</string>
    <string name="add_car_colour">Colour</string>
    <string name="add_car_doors_count">Doors Count</string>
    <string name="add_car_year_of_manufacture">Year of Manufacture</string>
    <string name="add_car_selected_year">Selected Year</string>
    <string name="add_car_pick_year">Pick Year</string>
    <string name="add_car_car_owner">Car Owner</string>
    <string name="add_car_add_new_owner">Add New</string>
    <string name="add_car_create">Create</string>
    <string name="add_car_cancel">Cancel</string>
    <string name="add_car_select">Select</string>
    <string name="add_car_select_year_of_manufacture">Select year of manufacture</string>
    <string name="add_car_car_saved_successfully_message">The car was saved successfully</string>
    <string name="add_car_enter_car_owner">Please enter a car owner.</string>

    <!-- Add car owner -->
    <string name="add_car_owner_first_name">First name</string>
    <string name="add_car_owner_last_name">Last name</string>
    <string name="add_car_owner_address">Address</string>
    <string name="add_car_owner_phone">Phone</string>
    <string name="add_car_owner_email">E-mail</string>
    <string name="add_car_owner_create">Create</string>
    <string name="add_car_car_owner_saved_successfully_message">The car owner was saved successfully</string>

    <!-- List damages -->
    <string name="list_damages_add_new">Add New Damage</string>
    <string name="list_damages_remove_all">Remove All Damages</string>
    <string name="list_damages_invalid_car">Invalid car.</string>

    <!-- Add damage -->
    <string name="add_damage_remove_all">Remove All Damages</string>
    <string name="add_damage_complete_changes">Complete Changes</string>
    <string name="add_damage_invalid_car">Invalid car.</string>

    <!-- Add damage details -->
    <string name="add_damage_details_description_hint">Add description for the damage</string>
    <string name="add_damage_details_cancel">Cancel</string>
    <string name="add_damage_details_add">Add</string>
    <string name="add_damage_details_take_photo">Take Photo</string>
    <string name="add_damage_details_invalid_car">Invalid car.</string>

    <!-- Confirm dialog -->
    <string name="confirm_dialog_title">Please confirm the delete action</string>
    <string name="confirm_dialog_message">Proceeding with this action with delete the damage permanently. Are you sure you want to proceed?</string>
</resources>
