<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".activities.AddCarOwnerActivity"
    style="@style/MatchParent">

    <include layout="@layout/layout_toolbar"/>

    <ScrollView
        android:id="@+id/scrollViewAddCarOwnerDetails"
        android:layout_below="@id/appToolbar"
        android:fillViewport="false"
        style="@style/FullWidth">

        <LinearLayout
            android:orientation="vertical"
            style="@style/FullWidth">

            <TextView
                android:text="@string/add_car_owner_first_name"
                style="@style/WrapContent.PropertyLabel"/>

            <EditText
                android:id="@+id/editTextAddCarOwnerFirstName"
                android:hint="@string/add_car_owner_first_name"
                style="@style/WrapContent.PropertyLabel.EditText"/>

            <TextView
                android:text="@string/add_car_owner_last_name"
                style="@style/WrapContent.PropertyLabel"/>

            <EditText
                android:id="@+id/editTextAddCarOwnerLastName"
                android:hint="@string/add_car_owner_last_name"
                style="@style/WrapContent.PropertyLabel.EditText"/>

            <TextView
                android:text="@string/add_car_owner_address"
                style="@style/WrapContent.PropertyLabel"/>

            <EditText
                android:id="@+id/editTextAddCarOwnerAddress"
                android:hint="@string/add_car_owner_address"
                style="@style/WrapContent.PropertyLabel.EditText"/>

            <TextView
                android:text="@string/add_car_owner_phone"
                style="@style/WrapContent.PropertyLabel"/>

            <EditText
                android:id="@+id/editTextAddCarOwnerPhone"
                android:hint="@string/add_car_owner_phone"
                android:inputType="phone"
                style="@style/WrapContent.PropertyLabel.EditText"/>

            <TextView
                android:text="@string/add_car_owner_email"
                style="@style/WrapContent.PropertyLabel"/>

            <EditText
                android:id="@+id/editTextAddCarOwnerEmail"
                android:hint="@string/add_car_owner_email"
                android:inputType="textEmailAddress"
                style="@style/WrapContent.PropertyLabel.EditText"/>

            <Button
                android:id="@+id/buttonAddCarOwnerCreate"
                style="@style/FullWidth.Button"
                android:text="@string/add_car_owner_create"/>

        </LinearLayout>

    </ScrollView>

</RelativeLayout>