<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".activities.RegisterActivity"
    android:background="@drawable/img_background"
    style="@style/MatchParent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_centerInParent="true"
        style="@style/WrapContent">

        <TextView
            android:text="@string/register"
            android:layout_marginBottom="@dimen/normal_margin"
            android:textSize="@dimen/title_text_size"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/colorWhite"
            style="@style/WrapContent"/>

        <EditText
            android:id="@+id/editTextRegisterEmail"
            android:inputType="textEmailAddress"
            android:hint="@string/register_email"
            android:textColorHint="@color/colorWhite"
            style="@style/WrapContent.LoginPageText"/>

        <EditText
            android:id="@+id/editTextRegisterPassword"
            android:inputType="textPassword"
            android:hint="@string/register_password"
            android:textColorHint="@color/colorWhite"
            style="@style/WrapContent.LoginPageText"/>

        <EditText
            android:id="@+id/editTextRegisterConfirmPassword"
            android:inputType="textPassword"
            android:hint="@string/register_confirm_password"
            android:textColorHint="@color/colorWhite"
            style="@style/WrapContent.LoginPageText"/>

        <Button
            android:id="@+id/buttonRegister"
            android:text="@string/register"
            android:background="@color/colorTeal"
            android:layout_marginTop="@dimen/normal_margin"
            style="@style/FullWidth"/>

    </LinearLayout>

</RelativeLayout>